implement dialog button

--- a/pages/about.html
+++ b/pages/about.html
@@ -407,32 +407,31 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-index="1" class="slider-item" tabindex="-1" aria-hidden="true"
-                                style="outline: none; width: 510px;">
+                            <div data-index="1" class="slick-item" tabindex="-1" aria-hidden="false"
+                                style="outline: none; width: 1096px;">
                                 <div>
                                     <div class="ImageTextLink_slideRoot " style="max-height: 640px;"><span
                                             style="box-sizing: border-box; display: block; overflow: hidden; width: initial; height: initial; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; inset: 0px;"><img
-                                                src="https://storage.yandexcloud.net/pp-prod/Frame_2_024983f90c.webp"
-                                                decoding="async" data-nimg="fill" class="ImageTextLink_image"
-                                                style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
+                                                src="https://storage.yandexcloud.net/pp-prod/Frame_2_024983f90c.webp" decoding="async"
+                                                data-nimg="fill" class="ImageTextLink_image"
+                                                style="background-image: url(&quot;assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
                                         <div style="position: absolute; right: 0px; bottom: 5px;">
                                             <div class="Dialog_dialogRoot    ">
-                                                <div class="Dialog_dialogBloop                                                            <h2>Неполные семьи</h2>
-                                                    <p>Татьяна в одиночку растит двоих сыновей, один из которых с
-                                                        тяжёлым заболеванием. Она пишет иконы, переводит с
-                                                        английского и никогда не теряет оптимизм</p>
-                                                    <div class=" Dialog_button"><a id="21"
-                                                        title="Помочь семьям"
-                                                        class="Generic_responsive Generic_buttonRoot  "
-                                                        href="/families">Помочь семьям</a></div>
-                                            </div><button
-                                                class="Generic_responsive Generic_iconRoot Generic_primary Generic_medium Dialog_dialogButton"><svg
-                                                    xmlns="http://www.w3.org/2000/svg" width="56" height="56"
-                                                    fill="none" viewBox="0 0 40 40" class="Generic_clrIcon">
-                                                    <path fill="var(--primary)" class="Generic_iconPath"
-                                                        d="M31.667 21.667H8.333a1.666 1.666 0 110-3.334h23.334a1.666 1.666 0 110 3.334z">
-                                                    </path>
-                                                </svg></button>
+                                                <div class="Dialog_dialogBloop">
+                                                    <h2>Неполные семьи</h2>
+                                                    <p>Татьяна в одиночку растит двоих сыновей, один из которых с тяжёлым заболеванием. Она пишет
+                                                        иконы, переводит с английского и никогда не теряет оптимизм</p>
+                                                    <div class="Dialog_button"><a id="21" title="Помочь семьям"
+                                                            class="Generic_responsive Generic_buttonRoot undefined undefined  "
+                                                            href="/families">Помочь семьям</a></div>
+                                                </div><button
+                                                    class="Generic_responsive Generic_iconRoot Generic_primary Generic_medium Dialog_dialogButton"><svg
+                                                        xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
+                                                        class="Generic_clrIcon">
+                                                        <path fill="var(--primary)" class="Generic_iconPath"
+                                                            d="M31.667 21.667H8.333a1.666 1.666 0 110-3.334h23.334a1.666 1.666 0 110 3.334z"></path>
+                                                    </svg></button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -2564,6 +2563,7 @@
     <script src="../scripts/slick.min.js"></script>
     <script src="../scripts/slider.js"></script>
     <script src="../scripts/burger.js"></script>
+    <script src="../scripts/dialog-button.js"></script>
 </body>
 
 </html>
