--- a/pages/main.html
+++ b/pages/main.html
@@ -1895,6 +1895,7 @@
     <script src="../scripts/slick.min.js"></script>
     <script src="../scripts/slider.js"></script>
     <script src="../scripts/burger.js"></script>
+    <script src="../scripts/dialog-button.js"></script>
 </body>
 
 </html>
