--- a/pages/giver.html
+++ b/pages/giver.html
@@ -865,5 +865,6 @@
     <script src="../scripts/slider.js"></script>
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/accordion.js"></script>
+    <script src="../scripts/dialog-button.js"></script>
 </body>
 </html>
