--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -852,5 +852,6 @@
     <script src="../scripts/slider.js"></script>
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/accordion.js"></script>
+    <script src="../scripts/dialog-button.js"></script>
 </body>
 </html>
