fix header layout in family page

--- a/pages/families/family.html
+++ b/pages/families/family.html
@@ -94,13 +94,32 @@
                                         </path>
                                     </svg>
                                 </div>
+                                 <div class="popup-root" style="position: absolute; pointer-events: auto;width: 100px; height: 15px">
+                                     <div class="popup-content " role="tooltip" id="popup-16">
+                                         <div
+                                             style="height: 8px; width: 16px; position: absolute; background: transparent; color: rgb(255, 255, 255); z-index: -1; transform: rotate(0deg) translateY(-100%) translateX(-50%); top: 0; left: 50%">
+                                             <svg data-testid="arrow" class="popup-arrow " viewBox="0 0 32 16" style="position: absolute;">
+                                                 <path d="M16 0l16 16H0z" fill="currentcolor"></path>
+                                             </svg></div>
+                                         <div class="AboutSubmenu_wrap">
+                                            <a class="AboutSubmenu_item" href="../about.html#mission">Наш подход</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#how_it_work">Как это работает</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#team">Команда</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#trustee">Попечители</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#friends">Друзья фонда</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#media-reviews">СМИ о нас</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#documents">Документы</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#brand">История фонда</a>
+                                            <a class="AboutSubmenu_item" href="../about.html#partners">Партнёры и друзья</a>
+                                         </div>
+                                     </div>
                                  </div>
                             </button>
                             <a class="Header_headerLink " id="2" href="../news-and-reports.html">новости</a>
                             <a class="Header_headerLink " id="3" href="../volunteer.html">волонтёрам</a>
                             <a class="Header_headerLink " id="4" href="../giver.html">дарителям</a>
-                            <a class="Header_headerLink " id="6" href="../family.html">семьям</a>
-                            <a class="Header_headerLink " id="35" href="../families/families.html">Акция</a>
+                            <a class="Header_headerLink" id="6" href="../family.html">семьям</a>
+                            <a class="Header_headerLink Header_active" id="35" href="../families/families.html">Акция</a>
                             <a class="Header_headerLink " id="39" href="../contacts.html">Контакты</a>
                             <a class="Header_headerLink " id="36" href="../feedback/reports.html">Отчёты и отзывы</a>
                             <a class="Header_headerLink " id="41" href="../donate.html">Помочь</a>
@@ -108,7 +127,7 @@
                         <div class="Header_headerButtons">
                             <div class="Header_notificationButton">
                                 <a
-                                    class="Icon_iconButtonRoot Icon_xSmall " 
+                                    class="Icon_iconButtonRoot Icon_xSmall" 
                                     href="../cart.html"
                                     style="display: flex;">
                                     <svg 
@@ -130,7 +149,7 @@
                             </div>
                             <div class="Header_notificationButton">
                                 <a
-                                    class="Icon_iconButtonRoot Icon_xSmall " 
+                                    class="Icon_iconButtonRoot Icon_xSmall" 
                                     href="../auth/login.html"
                                     style="display: flex;">
                                     <svg 
@@ -179,7 +198,7 @@
         </div>
         <a 
             class=" Generic_buttonRoot Generic_white Generic_small Generic_circle Mobile_hideDesktop Mobile_helpBtn" 
-            href="./donate.html">
+            href="../donate.html">
             <div class="Mobile_helpBtnContent">помочь</div>
         </a>
         <div class="Page_root">
