commit diff changes marat

--- a/pages/about.html
+++ b/pages/about.html
@@ -49,11 +49,7 @@
     <link rel="preload" as="image" href="https://storage.yandexcloud.net/pp-prod/Frame_4_ead4d7f35c.webp">
     <link rel="preload" as="image" href="https://storage.yandexcloud.net/pp-prod/Frame_5_d1a2a548fc.webp">
     <meta name="next-head-count" content="48">
-    <script src="https://www.youtube.com/iframe_api" async=""></script>
-    <script src="https://www.youtube.com/iframe_api" async=""></script>
-    <script src="https://www.youtube.com/iframe_api" async=""></script>
-    <script src="https://www.youtube.com/iframe_api" async=""></script>
-    <script src="https://www.youtube.com/iframe_api" async=""></script>
+    
     <link rel="stylesheet" href="../styles/common.css">
     <link rel="stylesheet" href="../styles/player.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -417,15 +413,17 @@
                                                 style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
                                         <div style="position: absolute; right: 0px; bottom: 5px;">
                                             <div class="Dialog_dialogRoot    ">
-                                                <div class="Dialog_dialogBloop                                                            <h2>Неполные семьи</h2>
+                                                <div class="Dialog_dialogBloop ">
+                                                   <h2>Неполные семьи</h2>
                                                     <p>Татьяна в одиночку растит двоих сыновей, один из которых с
                                                         тяжёлым заболеванием. Она пишет иконы, переводит с
                                                         английского и никогда не теряет оптимизм</p>
-                                                    <div class=" Dialog_button"><a id="21"
-                                                        title="Помочь семьям"
-                                                        class="Generic_responsive Generic_buttonRoot  "
-                                                        href="/families">Помочь семьям</a></div>
-                                            </div><button
+                                                    <div class=" Dialog_button">
+                                                        <a id="21"   title="Помочь семьям"  class="Generic_responsive Generic_buttonRoot  " href="/families">Помочь семьям</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button
                                                 class="Generic_responsive Generic_iconRoot Generic_primary Generic_medium Dialog_dialogButton"><svg
                                                     xmlns="http://www.w3.org/2000/svg" width="56" height="56"
                                                     fill="none" viewBox="0 0 40 40" class="Generic_clrIcon">
@@ -715,7 +713,7 @@
                 </section>
                 <section class="About_section" id="mission">
                     <h1>Наш подход</h1>
-                    <div class="Bent_bentRoot " style="margin-top: 81px;">
+                    <div class="Bent_bentRoot ">
                         <div class="Bent_bentItem">
                             <h3>Помогаем<br>вещами</h3>
                             <p>От продуктов <br>до средств реабилитации</p>
@@ -1354,7 +1352,7 @@
                                                                 class="plyr__progress__buffer" min="0" max="100" value="0"
                                                                 role="progressbar" aria-hidden="true">% buffered</progress><span
                                                                 class="plyr__tooltip">00:00</span></div>
-                                                    </div>
+                                        </div>
                                                     <div class="plyr__controls__item plyr__time--current plyr__time"
                                                         aria-label="Current time" role="timer">01:19</div>
                                                     <div class="plyr__controls__item plyr__volume"><button type="button"
@@ -1853,7 +1851,7 @@
                                                         allowfullscreen=""
                                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                                         referrerpolicy="strict-origin-when-cross-origin"
-                                                        title="Player for Круг добра Благотворительного фонда &quot;Подари подарок&quot;"
+                                                        title="Player for Сюжет канала ТВЦ об акции &quot;Рождественский подарок&quot; со склада 20.12.2020"
                                                         width="640" height="360"
                                                         src="https://www.youtube.com/embed/jltw6gmBMeI?autoplay=0&amp;controls=0&amp;disablekb=1&amp;playsinline=1&amp;cc_load_policy=0&amp;cc_lang_pref=auto&amp;widget_referrer=https%3A%2F%2Fpodaripodarok.org%2Fabout&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;modestbranding=1&amp;customControls=true&amp;noCookie=false&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fpodaripodarok.org&amp;widgetid=3"></iframe>
                                                     <div class="plyr__poster"
@@ -2022,7 +2020,7 @@
                                                         allowfullscreen=""
                                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                                         referrerpolicy="strict-origin-when-cross-origin"
-                                                        title="Player for Союз онлайн tvsoyuz. Прямое включение. Москва. 19 марта."
+                                                        title="Player for Сюжет канала ТВЦ об акции &quot;Рождественский подарок&quot; со склада 20.12.2020"
                                                         width="640" height="360"
                                                         src="https://www.youtube.com/embed/E4ATensdHLQ?autoplay=0&amp;controls=0&amp;disablekb=1&amp;playsinline=1&amp;cc_load_policy=0&amp;cc_lang_pref=auto&amp;widget_referrer=https%3A%2F%2Fpodaripodarok.org%2Fabout&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;modestbranding=1&amp;customControls=true&amp;noCookie=false&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fpodaripodarok.org&amp;widgetid=4"></iframe>
                                                     <div class="plyr__poster"
@@ -2284,9 +2282,10 @@
                                 </path>
                             </svg>
                         </button>
-                    </div><button
+                    </div>
+                    <!-- <button
                         class="Simple_simpleButtonRoot Simple_large Simple_outline  Simple_responsive"
-                        style="display:block;margin:0 auto">все упоминания</button>
+                        style="display:block;margin:0 auto">все упоминания</button> -->
                 </section>
             </div>
             <section class="About_section" id="documents">
