--- a/pages/main.html
+++ b/pages/main.html
@@ -829,7 +829,7 @@
                 </section>
                 <section class="IndexPage_section" id="mission">
                     <h1>Помогаем семьям в сложной <br>жизненной ситуации</h1>
-                    <div class="Bent_bentRoot " style="margin-top:81px">
+                    <div class="Bent_bentRoot " >
                         <div class="Bent_bentItem">
                             <h3>Помогаем<br>вещами</h3>
                             <p>От продуктов <br>до средств реабилитации</p>
@@ -865,7 +865,7 @@
                                 <p>становятся волонтерами сами</p>
                             </div><a
                                 class="Simple_simpleButtonRoot Simple_large Simple_outline Ticks_button Simple_responsive"
-                                style="display:flex" href="./families/families.html">отзывы семей</a>
+                                style="display:flex" href="./feedback/feedback.html">отзывы семей</a>
                         </div>
                     </div>
                     <div
