--- a/pages/donate.html
+++ b/pages/donate.html
@@ -240,9 +240,9 @@
                                 id="success" style="display: none;"></button><button id="fail"
                                 style="display: none;"></button>
                             <div class="CreditCard_header">
-                                <p class="CreditCard_headerText">Оплата</p>
+                                <p class="CreditCard_headerText">Оплата банковской картой</p>
                             </div>
-                            <div class="Input_inputBlock Input_selected Input_success" value="500"
+                            <div class="Input_inputBlock  " value="500"
                                 style="margin-bottom: 24px;"><label for="input_ikipl">сумма пожертвования</label><input
                                     id="input_ikipl" class="Input_input">
                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -258,7 +258,7 @@
                                         </path>
                                     </svg>
                                 <span class="Input_errorMessage"></span></div>
-                            <div class="Input_inputBlock Input_error" style="margin-bottom: 24px;"><label
+                            <div class="Input_inputBlock " style="margin-bottom: 24px;"><label
                                     for="input_f35oo">email</label><input id="input_f35oo" class="Input_input">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                     width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
@@ -377,12 +377,95 @@
                                     class="Simple_simpleButtonRoot Simple_large Simple_red  Simple_responsive"
                                     disabled="">помочь</button></div>
                             <p class="CreditCard_reports" style="margin-top: 24px;"><a
-                                    href="/feedback/reports">Отчеты</a> и <a href="/feedback">отзывы</a> о проделанной
+                                    href="./feedback/reports.html">Отчеты</a> и <a href="./feedback/feedback.html">отзывы</a> о проделанной
                                 работе можно посмотреть тут</p>
                         </div>
-                        <div class="Donate_form"data-payment-type="sber">
+                        <div class="Donate_form" data-payment-type="sber">
+
+                            <div><button id="pay" style="display:none" onclick="pay()"></button></div><button
+                                id="success" style="display: none;"></button><button id="fail"
+                                style="display: none;"></button>
+                            <div class="CreditCard_header">
+                                <p class="CreditCard_headerText">Оплата QR кодом</p>
+                            </div>
+                                <div class="form_qr">
+                                    <div class="Input_inputBlock  " value="500"
+                                        style="margin-bottom: 24px;"><label for="input_ikipl">сумма пожертвования</label><input
+                                            id="input_ikipl" class="Input_input">
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                            width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
+                                            <path fill="var(--state-success)"
+                                                d="M20 3.333a16.667 16.667 0 100 33.334 16.667 16.667 0 000-33.334zm7.167 12.684l-7.617 10a1.667 1.667 0 01-2.048.485 1.667 1.667 0 01-.585-.469L12.85 20.85a1.67 1.67 0 012.633-2.05l2.717 3.467 6.3-8.334a1.676 1.676 0 012.667 2.034v.05z">
+                                            </path>
+                                            </svg>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"
+                                                class="Input_icon Input_icon-error">
+                                                <path fill="var(--state-error)"
+                                                    d="M20 3.333a16.667 16.667 0 100 33.334 16.667 16.667 0 000-33.334zm0 25a1.666 1.666 0 110-3.332 1.666 1.666 0 010 3.332zm1.667-6.666a1.667 1.667 0 01-3.334 0v-8.334a1.667 1.667 0 013.334 0v8.334z">
+                                                </path>
+                                            </svg>
+                                        <span class="Input_errorMessage"></span></div>
+                                    <div class="Input_inputBlock " style="margin-bottom: 24px;"><label
+                                            for="input_f35oo">email</label><input id="input_f35oo" class="Input_input">
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                            width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
+                                            <path fill="var(--state-success)"
+                                                d="M20 3.333a16.667 16.667 0 100 33.334 16.667 16.667 0 000-33.334zm7.167 12.684l-7.617 10a1.667 1.667 0 01-2.048.485 1.667 1.667 0 01-.585-.469L12.85 20.85a1.67 1.67 0 012.633-2.05l2.717 3.467 6.3-8.334a1.676 1.676 0 012.667 2.034v.05z">
+                                            </path>
+                                            </svg>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"
+                                                class="Input_icon Input_icon-error">
+                                                <path fill="var(--state-error)"
+                                                    d="M20 3.333a16.667 16.667 0 100 33.334 16.667 16.667 0 000-33.334zm0 25a1.666 1.666 0 110-3.332 1.666 1.666 0 010 3.332zm1.667-6.666a1.667 1.667 0 01-3.334 0v-8.334a1.667 1.667 0 013.334 0v8.334z">
+                                                </path>
+                                            </svg>
+                                        <span class="Input_errorMessage"></span></div>
+                                    <p class="CreditCard_headerDescription">Даже небольшое регулярное пожертвование
+                                        поможет нам лучше планировать свою финансовую деятельность, а это значит, лучше помогать
+                                        семьям</p>
+                                    <div class="Toggle_toggleRoot  "><button
+                                            class="Toggle_toggle  Toggle_selected">ежемесячно</button><button
+                                            class="Toggle_toggle  ">разово</button></div>
+                                    <div class="CreditCard_checkbox">
+                                        <div><label class="" style="display: flex; align-items: center;"><span>
+                                                    <div class="checkbox"
+                                                        style="height: 24px; width: 24px; border-width: 2px; border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
+                                                        <svg  xmlns="http://www.w3.org/2000/svg"  width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
+                                                        <input type="checkbox" name="" hidden="" value="">
+                                                    </div>
+                                                </span></label></div>
+                                        <p class="CreditCard_oferta">Соглашаюсь с <a
+                                                href="/Политика_в_области_перс_данных_Подари_подарок.pdf"
+                                                target="_blank">политикой обработки персональных данных</a></p>
+                                    </div>
+                                    <div class="CreditCard_checkbox">
+                                        <div><label class="" style="display: flex; align-items: center;"><span>
+                                                    <div class="checkbox"
+                                                        style="height: 24px; width: 24px; border-width: 2px;  border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
+                                                        <svg  xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
+                                                        <input type="checkbox" name="" hidden="" value="">
+                                                    </div>
+                                                </span></label></div>
+                                        <p class="CreditCard_oferta">Соглашаюсь с условиями <a
+                                                href="https://storage.yandexcloud.net/pp-prod/oferta_a77d41b8c2.pdf"
+                                                target="_blank">договора-оферты</a></p>
+                                    </div>
+                                    <div style="margin-top: 24px;"><button
+                                            class="Simple_simpleButtonRoot Simple_large Simple_red  Simple_responsive"
+                                            onclick="(function(){ document.querySelector('.form_qr').classList.add('hide'); document.querySelector('.Sberbank_sberbank').classList.add('show');})()"">помочь</button></div>
+                                    
+                                </div><!-- /form_qr  -->
                             <div class="Sberbank_sberbank">
-                                <div class="Sberbank_row Sberbank_sberbank_steps">
+                                <div class="Sberbank_tiny_petal Sberbank_petal_right_top">
+                                    <div class="Sberbank_sberbank_qr"><img src="../assets/QRCode.png" alt=""
+                                            style="object-fit: contain; width: 100%;"></div>
+                                </div>
+                                <div class="Sberbank_little_petal Sberbank_petal_left_bottom">
+                                    <p class="Sberbank_sberbank_qr_text">Отсканируйте этот код в <a
+                                            href="#" class="Sberbank_sberbank_link">мобильном
+                                            приложении</a> Сбербанка и реквизиты будут заполнены автоматически.</p>
+                                </div>
+                                <!-- <div class="Sberbank_row Sberbank_sberbank_steps">
                                     <div class="Sberbank_col">
                                         <div class="Sberbank_btn_more_wraper Sberbank_mobile_only"><a
                                                 href="https://platiqr.ru/?uuid=1000043788"
@@ -404,8 +487,7 @@
                                         <p class="Sberbank_sberbank_step">04.</p>
                                         <p class="Sberbank_sberbank_text">БФ ПОДАРИ ПОДАРОК</p>
                                     </div>
-                                    <div
-                                        class="Sberbank_col Sberbank_sberbank_steps_right Sberbank_mobile_hide">
+                                    <div class="Sberbank_col Sberbank_sberbank_steps_right Sberbank_mobile_hide">
                                         <div class="Sberbank_tiny_petal Sberbank_petal_right_top">
                                             <div class="Sberbank_sberbank_qr"><img src="../assets/QRCode.png" alt=""
                                                     style="object-fit: contain; width: 100%;"></div>
@@ -417,23 +499,11 @@
                                                 останется ввести только сумму.</p>
                                         </div>
                                     </div>
-                                </div>
-                                <p class="Sberbank_sberbank_text Sberbank_mobile_hide">Либо сразу в поиске
-                                    в личном кабинете «бф подари подарок» <br>Укажите ваше ФИО, назначение платежа «на
-                                    уставную деятельность» и сумму. <br><b>*Сбербанк не переводит пожертвования меньше
-                                        25 рублей.</b></p>
-                                <div class="Sberbank_sberbank_requisites">
-                                    <p class="Sberbank_head_h5">Реквизиты фонда</p>
-                                    <p class="Sberbank_text"><span>БФ "ПОДАРИ ПОДАРОК"</span></p>
-                                    <p class="Sberbank_text">ИНН <span>5006016221</span></p>
-                                    <p class="Sberbank_text">Номер счета <span>40701810640000000442</span></p>
-                                    <p class="Sberbank_text">БИК <span>044525225</span></p>
-                                    <p class="Sberbank_text">Корр. счет <span>30101810400000000225</span></p>
-                                    <p class="Sberbank_text">Наименование Банка <span>ПАО СБЕРБАНК</span></p>
-                                </div>
-                                <p class="text" style="margin-top: 24px;"><a href="/feedback/reports">Отчеты</a> и <a
-                                        href="/feedback">отзывы</a> о проделанной работе можно посмотреть тут</p>
+                                </div> -->
+                                
                             </div>
+                            <p class="CreditCard_reports" style="margin-top: 24px;"><a href="./feedback/reports.html">Отчеты</a> и <a href="./feedback/feedback.html">отзывы</a> о проделанной
+                                работе можно посмотреть тут</p>
                         </div>
                     </div>
                     <div class="Donate_rightSide">
